tests/ui/parser/recover/turbofish-arg-with-stray-colon.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `else`, `{`, or an operator, found `,`
  --> $DIR/turbofish-arg-with-stray-colon.rs:2:17
   |
LL |     let x = Tr<A, A:>;
   |                 ^ expected one of 8 possible tokens
   |
   = note: type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>
help: maybe write a path separator here
   |
LL |     let x = Tr<A, A::>;
   |                     +

error: aborting due to 1 previous error

